# internal/model/article.go
@@ -1,0 +1,8 @@
+package model
+
+import "service/pkg/app"
+
+type ArticleSwagger struct {
+	List  []*Article
+	Paper *app.Pager
+}
