# internal/model/tag.go
@@ -1,0 +1,8 @@
+package model
+
+import "service/pkg/app"
+
+type TagSwagger struct {
+	List  []*Tag
+	Paper *app.Pager
+}
