# internal/routers/v1/tag.go
@@ -10,63 +10,46 @@ func NewTag() Tag {
 	return Tag{}
 }
 
-// Get @Summary 获取一个标签
-//
-//	@Produce	json
-//	@Param		name		query		string			false	"标签名称"	maxlength(100)
-//	@Param		state		query		int				false	"状态"	Enums(0, 1)	default(1)
-//	@Param		page		query		int				false	"页码"
-//	@Param		page_size	query		int				false	"每页数量"
-//	@Success	200			{object}	model.Tag		"成功"
-//	@Failure	400			{object}	errorcode.Error	"请求错误"
-//	@Failure	500			{object}	errorcode.Error	"内部错误"
-//	@Router		/api/v1/tags [get]
-func (t Tag) Get(c *gin.Context) {}
-
 // List @Summary 获取多个标签
-//
-//	@Produce	json
-//	@Param		name		query		string			false	"标签名称"	maxlength(100)
-//	@Param		state		query		int				false	"状态"	Enums(0, 1)	default(1)
-//	@Param		page		query		int				false	"页码"
-//	@Param		page_size	query		int				false	"每页数量"
-//	@Success	200			{object}	model.Tag		"成功"
-//	@Failure	400			{object}	errorcode.Error	"请求错误"
-//	@Failure	500			{object}	errorcode.Error	"内部错误"
-//	@Router		/api/v1/tags [get]
+// @Produce  json
+// @Param name query string false "标签名称" maxlength(100)
+// @Param state query int false "状态" Enums(0, 1) default(1)
+// @Param page query int false "页码"
+// @Param page_size query int false "每页数量"
+// @Success 200 {object} model.TagSwagger "成功"
+// @Failure 400 {object} errorcode.Error "请求错误"
+// @Failure 500 {object} errorcode.Error "内部错误"
+// @Router /api/v1/tags [get]
 func (t Tag) List(c *gin.Context) {}
 
 // Create @Summary 新增标签
-//
-//	@Produce	json
-//	@Param		name		body		string			true	"标签名称"	minlength(3)	maxlength(100)
-//	@Param		state		body		int				false	"状态"	Enums(0, 1)		default(1)
-//	@Param		created_by	body		string			true	"创建者"	minlength(3)	maxlength(100)
-//	@Success	200			{object}	model.Tag		"成功"
-//	@Failure	400			{object}	errorcode.Error	"请求错误"
-//	@Failure	500			{object}	errorcode.Error	"内部错误"
-//	@Router		/api/v1/tags [post]
+// @Produce  json
+// @Param name body string true "标签名称" minlength(3) maxlength(100)
+// @Param state body int false "状态" Enums(0, 1) default(1)
+// @Param created_by body string true "创建者" minlength(3) maxlength(100)
+// @Success 200 {object} model.TagSwagger"成功"
+// @Failure 400 {object} errorcode.Error "请求错误"
+// @Failure 500 {object} errorcode.Error "内部错误"
+// @Router /api/v1/tags [post]
 func (t Tag) Create(c *gin.Context) {}
 
 // Update @Summary 更新标签
-//
-//	@Produce	json
-//	@Param		id			path		int				true	"标签 ID"
-//	@Param		name		body		string			false	"标签名称"	minlength(3)	maxlength(100)
-//	@Param		state		body		int				false	"状态"	Enums(0, 1)		default(1)
-//	@Param		modified_by	body		string			true	"修改者"	minlength(3)	maxlength(100)
-//	@Success	200			{array}		model.Tag		"成功"
-//	@Failure	400			{object}	errorcode.Error	"请求错误"
-//	@Failure	500			{object}	errorcode.Error	"内部错误"
-//	@Router		/api/v1/tags/{id} [put]
+// @Produce  json
+// @Param id path int true "标签 ID"
+// @Param name body string false "标签名称" minlength(3) maxlength(100)
+// @Param state body int false "状态" Enums(0, 1) default(1)
+// @Param modified_by body string true "修改者" minlength(3) maxlength(100)
+// @Success 200 {array} model.TagSwagger"成功"
+// @Failure 400 {object} errorcode.Error "请求错误"
+// @Failure 500 {object} errorcode.Error "内部错误"
+// @Router /api/v1/tags/{id} [put]
 func (t Tag) Update(c *gin.Context) {}
 
 // Delete @Summary 删除标签
-//
-//	@Produce	json
-//	@Param		id	path		int				true	"标签 ID"
-//	@Success	200	{string}	string			"成功"
-//	@Failure	400	{object}	errorcode.Error	"请求错误"
-//	@Failure	500	{object}	errorcode.Error	"内部错误"
-//	@Router		/api/v1/tags/{id} [delete]
+// @Produce  json
+// @Param id path int true "标签 ID"
+// @Success 200 {string} string "成功"
+// @Failure 400 {object} errorcode.Error "请求错误"
+// @Failure 500 {object} errorcode.Error "内部错误"
+// @Router /api/v1/tags/{id} [delete]
 func (t Tag) Delete(c *gin.Context) {}
